Reset is_ticking_ when calling AnimationPlayer::RemoveFromTicking

it_ticking_ isn't cleared in this path. This means that future
animations wont be started since UpdateTickingState will think that its
already ticking and wont add itself to the AnimationHost's ticking
players list.

I believe the omission in
https://crrev.com/3c9ed65e3ad14bb1ee083e69a5b26fc2d82569c0 [formerly e7592f02242026970af0a6425928e5271a52f79d] was that
when the scrolling Element is unregistered the ElementAnimations will
be removed from AnimationHost. In contrast, the AnimationPlayer lives on.
That's why ElementAnimations didn't need to clear the active/ticking
flag but AnimationHost does.

BUG=704410
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2791513002
Cr-Commit-Position: refs/heads/master@{#460966}

Former-commit-id: a064840eb26683687c53dc6fa6b5c29a2c418b5c